# short-link

./: .env  .env.example  .gitignore  Cargo.toml  docker-compose.yml
.sqlx/: query-07fb83eab7b59df4f0f512f8e169c7597bfe861cc66936a3db4cd2edb22ba193.json  query-401407b9a86882c8bddd635a25f18f78a15bad3f8915860e97aee4a75ca6bce0.json  query-838f4ac2234337847b883f1788c537a4c898faf0251720e275c177637068a176.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-89bd1bbcd6b20c6838a857a7f7881b5e8ff77e853a9579c2b715b9c8a7ba27e0.json  query-9e7e73b556787dd1a4dad7b802682a387d9c86d988cd22833dcabc0c1665d508.json  query-c4c20267daf15666a1acd5fabdc8c0e0f1166ef26df396a42c47d219c554fae6.json  query-ce6994aa51a4eb2b4dfab64131b897b2463290a9409424823643beaf55806212.json
migrations/: 20250416103428_init_schema.sql  20250417140414_add_users.up.sql  20250417140430_add_links.down.sql  20250417140430_add_links.up.sql
src/: config.rs  container.rs  main.rs  router.rs
src/domain/: mod.rs
src/domain/account/: service.rs
src/domain/account/entity/: link.rs
src/domain/account/infra/: persistence.rs
src/domain/auth/: mod.rs  service.rs
src/domain/auth/entity/: user.rs
src/domain/auth/infra/: persistence.rs
src/domain/auth/transport/: http.rs
src/domain/link_manager/: client.rs  mod.rs  service.rs
src/domain/link_manager/entity/: link.rs
src/domain/link_manager/infra/: persistence.rs
src/domain/link_manager/transport/: http.rs
src/domain/user_manager/: mod.rs  service.rs
src/tools/: jwt.rs  password_hash.rs
src/transport/http/: auth.rs
(+4 files in other folders)
