[package]
name = "short-link"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = { version = "0.6.12" }
async-trait = "0.1.74"
tokio = { version = "1", features = ["full"] }
http = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.14.0", features = ["serde", "v4"] }
nanoid = "0.4"  
axum = { version = "0.8.1", features = ["macros"] }
utoipa = { version = "5.3.1", features = ["axum_extras",] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipa-axum = "0.2"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "bigdecimal",
] }
thiserror = "1"
readonly = "0"
validator = { version = "0.19.0", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
solar = { git = "https://github.com/chanitylabs/solar", branch = "main" }
jsonwebtoken = "9.3.1"
sha2 = "0.10.8"
hex = "0.4.3"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower-http = { version = "0.6.2", features = ["cors"] }
config = "0.15.11"
dotenv = "0.15.0"
